# intent-filtering

./: .gitignore  AGENTS.md  CLAUDE.md  CODING.md  CONTRIBUTING.md  PLAN-pending-chips-grid.md  PLAN-pending-chips-ux.md  PLAN_STAGE2.md  PLAN_STAGE3.md  README.md  TESTING.md
.claude/commands/: skill-coding.md  skill-testing.md  skill-verifying-code.md  skill-verifying-test.md
api/: .env.example  pyproject.toml
api/app/: config.py  database.py  main.py  models.py  schemas.py
api/app/routers/: __init__.py  intent.py  movies.py  movies_stat.py
api/scripts/: etl.py
api/tests/: conftest.py  test_intent.py  test_main.py  test_routers.py
frontend/: pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BigNumber.tsx  FilterChip.tsx  FilterChips.tsx  FilterPanel.tsx  FilterRecap.tsx  GenreMultiSelect.tsx  IntentInput.tsx  MiniScoreBars.tsx  MovieList.tsx  SortableColumnHeader.tsx
frontend/src/components/ui/: slider.tsx
frontend/src/lib/: api.ts  filterSlots.ts  types.ts  utils.ts
plans/: 2026-06-11_1717_stage2.md  2026-07-03_1805_add-movie-list-sort.md  2026-07-10_1428_filter-recap-rework.md  plan-active-filters-as-filter-params-body.md  plan-imdb-theming.md  plan-multivalue-genre-filter.md  plan-pending-chips-ux.md
